.k8s/manifests/staging.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __SERVICE_NAME__-deployment
  namespace: __NAMESPACE__
  labels:
    app: __SERVICE_NAME__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: __SERVICE_NAME__
  template:
    metadata:
      namespace: __NAMESPACE__
      labels:
        app: __SERVICE_NAME__
    spec:
      imagePullSecrets:
      - name: docker-registry-connection-secret
      containers:
      - name: __SERVICE_NAME__
        image: __DOCKER_REGISTRY_URL__/__DOCKER_IMAGE_NAME__:__DOCKER_IMAGE_TAG__
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
        readinessProbe: 
          httpGet: 
            path: /welcome
            port: 80
          periodSeconds: 3
          timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: __SERVICE_NAME__-svc
  namespace: __NAMESPACE__
spec:
  selector:
    app: __SERVICE_NAME__
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __SERVICE_NAME__-ing
  namespace: __NAMESPACE__
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
      - __URL__
    secretName: __SERVICE_NAME__-secret
  rules:
  - host: __URL__
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: __SERVICE_NAME__-svc
            port:
              number: 80
